[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/WDH Theme/WDH_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/Fonts/IBM_BIOS.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Sprites/UI/LifeIcon_32_white.png" type="Texture" id=3]
[ext_resource path="res://source/UI/Life/StartLife.gdshader" type="Shader" id=4]
[ext_resource path="res://source/UI/Life/Corpse_Interface.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "LowLife"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Life_PanelContainer/Margin_Container/Horizontal_Box/CorpseIcon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Life_PanelContainer/Margin_Container/Horizontal_Box/CorpseIcon:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 2 ) ]
}

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "START_REF"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Life_PanelContainer/Margin_Container/Horizontal_Box/CorpseIcon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Life_PanelContainer/Margin_Container/Horizontal_Box/CorpseIcon:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 4 ) ]
}

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Corpse_Interface_Base" type="Control"]
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 1 )
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LowLife = SubResource( 3 )
anims/START_REF = SubResource( 5 )

[node name="Life_PanelContainer" type="PanelContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 82.0
margin_bottom = 41.0
custom_styles/panel = SubResource( 1 )

[node name="Margin_Container" type="MarginContainer" parent="Life_PanelContainer"]
margin_right = 75.0
margin_bottom = 34.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="Horizontal_Box" type="HBoxContainer" parent="Life_PanelContainer/Margin_Container"]
margin_left = 1.0
margin_top = 1.0
margin_right = 74.0
margin_bottom = 33.0
custom_constants/separation = 3

[node name="CorpseIcon" type="TextureRect" parent="Life_PanelContainer/Margin_Container/Horizontal_Box"]
material = SubResource( 4 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="LifeAmount_Container" type="CenterContainer" parent="Life_PanelContainer/Margin_Container/Horizontal_Box"]
margin_left = 35.0
margin_right = 73.0
margin_bottom = 32.0
rect_min_size = Vector2( 38, 0 )
size_flags_horizontal = 3

[node name="LifeAmount_Label" type="Label" parent="Life_PanelContainer/Margin_Container/Horizontal_Box/LifeAmount_Container"]
margin_left = 1.0
margin_top = 4.0
margin_right = 37.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "24"
align = 1
valign = 1
